Fix navigation jump problem and add all google map code (to be added in weebly embed element

--- a/scss/partials/_editor.scss
+++ b/scss/partials/_editor.scss
@@ -26,5 +26,8 @@
     & > div > div > div {
       height: inherit;
     }
+    iframe {
+      height: 1000px !important;
+    }
   }
 }
